Wed Mar  4 11:52:30 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.c (Init_sym): make dsym_fstrs a hash compared by identity
	  as the keys are unique fstrings, to get rid of running hash and
	  compare methods and causing new object allocation during garbage
	  collection phase.  [ruby-dev:48891] [Bug #10933]

Wed Mar  4 10:16:57 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* enum.c: Fix typo in slice_after's exception message.
	  [fix GH-842][ci skip] Patch by @jsyeo

Wed Mar  4 10:15:37 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/syntax/methods.rdoc: add some missing spaces and
	  fix a grammatical error in method docs.
	  [fix GH-843][ci skip] Patch by @nikolas

Wed Mar  4 02:13:06 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (backport_command_string): pick up only
	  when the revision exists in trunk.

Wed Mar  4 00:44:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_io_blocking_region): assigned variables
	  inside EXEC_TAG() should be volatile.

	* thread.c (rb_thread_s_handle_interrupt): ditto.

	* thread.c (exec_recursive): ditto.

Wed Mar  4 00:29:18 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: now can specify shorten form of commands.

Tue Mar  3 23:41:42 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (Readline.readline): drop untreated control
	  characters.

Tue Mar  3 22:25:24 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/lib/envutil.rb (EnvUtil.invoke_ruby): need to rescue because
	  Signal.signame may raise exception.

Tue Mar  3 16:57:39 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: use 'b' instead of 's' for showing
	  Backport options for merger.rb.

Tue Mar  3 16:55:23 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: show selected ticket number at prompt.

Tue Mar  3 14:47:30 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>
